arkd console v0
